# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  games_logic.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
eokulik_brain_games.egg-info/: PKG-INFO  SOURCES.txt
