[tool.poetry]
name = "eokulik_brain_games"
version = "0.1.7"
description = "Console brain games"
authors = ["Eugeny Okulik <tiburon854@gmail.com>"]
repository = "https://github.com/eokulik/python-project-lvl1"
classifiers = [
    "Development Status :: 4 - Beta"
    "Environment :: Console"
    "Programming Language :: Python :: 3"
    "Topic :: Games/Entertainment"
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[[tool.poetry.source]]
name = 'Test Pypi'
url = 'https://test.pypi.org/simple'

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

